--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.554.0",
-    "next": "16.0.3",
-    "next-themes": "^0.4.6",
+    "next": "^15.4.0-canary.33",
+    "next-themes": "latest",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
+    "viem": "^2.39.3",
+    "x402-fetch": "^0.7.0",
     "x402-next": "^0.7.1"
   },
   "devDependencies": {
